kubernetes/platform/kubevirt/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: kubevirt-egress
spec:
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: kubevirt
  egress:
    - toEntities:
        - kube-apiserver
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "443"
              protocol: TCP
    - toEntities:
        - cluster
